Cycles Rendering Tiles Indicator Limited to 16 #47132

Closed
opened 2016-01-07 01:28:12 +01:00 by Pavol Klacansky · 15 comments

System Information
openSuse 13.1; nvidia GTX 750

Blender Version
Broken: 2.76b
Worked: (optional)

Short description of error
When tiled rendering is used with cycles (blender render is fine) the orange indicators of the individual tiles are limited to 16.

Exact steps for others to reproduce the error
The default blend file works, only difference is setting up samples to 20k or something so it does not immediately finish rendering in Cycles. All other settings are default.
And you need probably more than 16 cores/threads,

**System Information** openSuse 13.1; nvidia GTX 750 **Blender Version** Broken: 2.76b Worked: (optional) **Short description of error** When tiled rendering is used with cycles (blender render is fine) the orange indicators of the individual tiles are limited to 16. **Exact steps for others to reproduce the error** The default blend file works, only difference is setting up samples to 20k or something so it does not immediately finish rendering in Cycles. All other settings are default. And you need probably more than 16 cores/threads,

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @pavolzetor

Added subscriber: @pavolzetor

Since I do not know how to attach an image within xmonad (drag & drop), here is a link to screenshot. Also, blender crashes a lot on that many threads.

http://sci.utah.edu/~klacansky/img/blender_144thread.png

Since I do not know how to attach an image within xmonad (drag & drop), here is a link to screenshot. Also, blender crashes a lot on that many threads. http://sci.utah.edu/~klacansky/img/blender_144thread.png

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

I cannot confirm this. Setting threads manually to e.g. 64, results in 64 orange tiles.

I cannot confirm this. Setting threads manually to e.g. 64, results in 64 orange tiles.

Added subscriber: @Sergey

Added subscriber: @Sergey

@ThomasDinges, not being able to reproduce the issue does not mean report is incomplete.

@pavolzetor, some questions:

  • Does it happen when you run blender --factory-startup ?
  • Does it happen with Blender Internal rendering?
  • Does using blender-softwaregl make any different to the behavior?
@ThomasDinges, not being able to reproduce the issue does not mean report is incomplete. @pavolzetor, some questions: - Does it happen when you run `blender --factory-startup` ? - Does it happen with Blender Internal rendering? - Does using `blender-softwaregl` make any different to the behavior?
  • no (although I can't set more than 64 threads, but it still start rendering 144 tiles - same us number of available threads)
  • no
  • no

This is the blend file I am using.
http://sci.utah.edu/~klacansky/data/gto67_mod_pt.blend

- no (although I can't set more than 64 threads, but it still start rendering 144 tiles - same us number of available threads) - no - no This is the blend file I am using. http://sci.utah.edu/~klacansky/data/gto67_mod_pt.blend

Added subscriber: @mont29

Added subscriber: @mont29

So what’s the status here? If issue does not happen with --factory-settings then it’s just an addon doing stupid things probably…

So what’s the status here? If issue does not happen with `--factory-settings` then it’s just an addon doing stupid things probably…
Sergey Sharybin was assigned by Bastien Montagne 2016-01-22 16:16:20 +01:00

I cannot imagine that there is a bug in Cycles itself here...

I cannot imagine that there is a bug in Cycles itself here...

This issue was referenced by 398baef6c8

This issue was referenced by 398baef6c830fad7ec2ffb75801713775c348f7c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @PeterBoos

Added subscriber: @PeterBoos

if there are more threads active then there are cores then code execution might not be ideal, perhaps tuning on parallelism ea the tasker might solve it. (i've seen this in other parralel code that wasnt optimal, but i'm into the dark of how blender deals with it)

  • merely an advice for parallel coding. *
if there are more threads active then there are cores then code execution might not be ideal, perhaps tuning on parallelism ea the tasker might solve it. (i've seen this in other parralel code that wasnt optimal, but i'm into the dark of how blender deals with it) * merely an advice for parallel coding. *
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47132
No description provided.