Fix T47132: Cycles Rendering Tiles Indicator Limited to 16